[package]
name = "libc-test"
version = "0.2.96"
authors = ["The Rust Project Developers"]
license = "MIT OR Apache-2.0"
build = "build.rs"
repository = "https://github.com/rust-lang/libc"
homepage = "https://github.com/rust-lang/libc"
description = """
A test crate for the libc crate.
"""

[dependencies.libc]
path = ".."
version = "0.2.96"
default-features = false

[build-dependencies]
cc = "1.0.61"
# FIXME: Use fork ctest until the maintainer gets back.
ctest2 = "0.4"

[features]
default = [ "std" ]
std = [ "libc/std" ]
align = [ "libc/align" ]
extra_traits = [ "libc/extra_traits" ]

[[test]]
name = "main"
path = "test/main.rs"
harness = false

[[test]]
name = "semver"
path = "test/semver.rs"
harness = false
